[tool.poetry]
name = "insta-post"
version = "0.1.0"
description = "AI Agent that creates instagram post."
authors = ["JoseMRodriguezM <jmrodriguezm13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
crewai = "^0.11.0"
python-dotenv = "1.0.0"
opencv-python = "4.8.1.78"
google-search-results = "2.4.2"
langchain-groq = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
